#+TITLE: Changelog
#+OPTIONS: H:10
#+OPTIONS: num:nil
#+OPTIONS: toc:2

* Unreleased

** Fixed

*** Emacs

+ ~my-org-refile-dwim~ complaining about ~org-capture-mode~
  not being previously loaded

* 0.8.0 - 2018-08-06

** Added

+ Initial XScreenSaver configuration

*** Emacs

+ configuration for =maybe.org= agenda file

+ initial =org-brain= configuration

*** XMonad

+ bindings for volume control

  + lower volume

  + mute

  + raise volume

** Changed

+ =rofi= is now used in place of =dmenu= for XMonad

+ terminal now uses Emacs-like bindings rather than Vi-like

*** Emacs

+ =Complete= agenda view now shows cancelled items

+ ~my-org-fill-column~ is now ~62~

+ projects (for GTD) are now kept in =gtd.org=

+ reordered refile targets to favour more likely targets first

+ refile target for projects now uses =aof= tag rather than
  level

** Fixed

*** =org-agenda=

+ all incomplete inbox items now show in =Unprocessed= agenda
  view

*** XMonad

+ =FreeMind= should now display correctly with XMonad

* 0.7.0 - 2018-07-12

** Added

+ ~history~ command now displays timestamps

*** Emacs

**** Commands

+ ~my-search-duckduckgo~

+ ~my-search-duckduckgo-site~

+ ~my-search-gtd-forum~

**** Org

+ capture template for single-day events

***** Agenda

+ new bulk command for cancelling and archiving marked entries

****** New Agenda Views

+ calendar

+ deadlines

+ someday/maybe

  + areas of focus

  + categories

  + potential projects

+ waiting for actions

** Changed

*** Emacs

+ ~calendar-date-style~ is now ~iso~

+ ~display-line-numbers-mode~ is now used instead of
  ~linum-mode~ for displaying line numbers

+ Helm grep variants are now used instead of Projectile
  variants for Git grep and AG grep

**** Org

***** Agenda Views

+ =Unprocessed= agenda view now triggered with ~u~ (previously
  ~T~)

****** =Complete= agenda view

+ now includes completed items from inbox

+ now loads much faster

***** =Event= capture template
